Prevent Text Overlap

--- a/style.css
+++ b/style.css
@@ -12,14 +12,18 @@ body {
   background-size: cover;
 }
 
+#combo {
+  min-height: 550px;
+}
+
 #quote-info {
-  height: 150px;
+  min-height: 150px;
   padding: 80px 80px 20px 80px;
   text-align: center;
 }
 
 #author-info {
-  height: 75px;
+  min-height: 50px;
   padding: 10px 20px 20px 20px;
   text-align: center;
 }
